--- a/views/partials/blogid/id.hbs
+++ b/views/partials/blogid/id.hbs
@@ -6,12 +6,12 @@ Partial : Id/Id product/article
     <div class="container">
         <div clas="row">
             <div class="col-md-12">
-                <h2> Titre Article</h2>
+                <h2>un titre</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8">
-                <img src="/assets/images/paysage2.jpg" alt="paysage" class="produit-img">
+                <img src="/assets/images/creative1.jpg" alt="paysage" class="produit-img">
             </div>
 
             <div class="col-md-4">
@@ -24,15 +24,12 @@ Partial : Id/Id product/article
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <h4>Un Titre</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illo quaerat
-                                perferendis dolor voluptatem iusto quidem dolorum repudiandae possimus
-                                repellendus,
-                                odio tempore ex alias. Asperiores recusandae saepe voluptates quae possimus.</p>
+                            <h4>un titre</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi repellat, optio pariatur
+                                aperiam consequatur incidunt ex tenetur cumque atque iure quae. Laudantium ex assumenda
+                                repellat esse veniam pariatur quod ipsum.</p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
