--- a/views/partials/HeadDefault.hbs
+++ b/views/partials/HeadDefault.hbs
@@ -25,3 +25,6 @@ Page type :Head par default
 </head>
 
 <body>
+    <div id="scroll_to_top">
+        <a href="#top"><i class="scroll-icon fas fa-arrow-circle-up"></i></a>
+    </div>
