--- a/views/partials/Admin/gestuser.hbs
+++ b/views/partials/Admin/gestuser.hbs
@@ -15,8 +15,7 @@ Partial : Admin/ Gestion utilisateurs
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body table-responsive">
             <!-- Button trigger modal Gestin users -->
-            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#GestModal">
-                <i class="fas fa-tools"></i></i></button>
+
 
             <table class="table table-borderless table-secondary container">
                 <thead>
@@ -26,6 +25,9 @@ Partial : Admin/ Gestion utilisateurs
                         <th scope="col-xs-2">Name</th>
                         <th scope="col-xs-2">First Name</th>
                         <th scope="col-xs-2">Email</th>
+                        <th scope="col-xs-2">Gérer profil</th>
+
+
                     </tr>
                 </thead>
                 <tbody>
@@ -35,12 +37,15 @@ Partial : Admin/ Gestion utilisateurs
                         <td>Name</td>
                         <td>First Name</td>
                         <td>@mail.com</td>
+                        <td scope="col-xs-2"><button type="button" class="btn" data-bs-toggle="modal"
+                                data-bs-target="#GestModal">
+                                <i class="fas fa-tools"></i></i></button></td>
                     </tr>
                     <tr>
                         {{#each dbuser }}
                         <th><img class="img-user" src="/assets/images/emilie.jpg"> </th>
                         <td>{{ this.pseudo }}</td>
-                        <td>{{this.firstname}}</td>
+                        <td>{{ this.firstname }}</td>
                         <td>{{ this.name }}</td>
                         <td>{{ this.email }}</td>
                         {{/each}}
