--- a/views/partials/register/newuser.hbs
+++ b/views/partials/register/newuser.hbs
@@ -36,12 +36,12 @@ Partial : register/ New user
                     <input name="email" type="email" class="form-control" placeholder="name@example.com">
                 </div>
                 <div class="col-md-6">
-                    <label class="form-label">Mot de passe:</label>
-                    <input name="password" type="password" class="form-control">
+                    <label for="Password" class="form-label">Mot de passe</label>
+                    <input name="password" type="password" class="form-control" id="Password">
                 </div>
                 <div class="col-md-6">
-                    <label class="form-label"> Confirmer mot de passe:</label>
-                    <input name="password" type="password" class="form-control">
+                    <label for="Password" class="form-label">Confirmer mot de passe :</label>
+                    <input name="password" type="password" class="form-control" id="Password">
                 </div>
 
 
