--- a/views/partials/endDefault.hbs
+++ b/views/partials/endDefault.hbs
@@ -2,11 +2,9 @@
 Page type:Pied de page / fin de page/
 --}}
 
-<div id="scroll_to_top">
-    <a href="#top"><i class="scroll-icon fas fa-arrow-circle-up"></i></a>
-</div>
-{{! ==========Script DarkMode=======}}
+{{! ==========Scripts=======}}
 <script src="/assets/js/BlogFilter.js"></script>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
