--- a/views/partials/user/showuser.hbs
+++ b/views/partials/user/showuser.hbs
@@ -3,9 +3,25 @@ Partial : user/ Profil utilisateur
 --}}
 
 <section>
-
     <div class="container">
         <h2>Mon Profil</h2>
+        <div class="row">
+            <div class="col-md-2">
+                <img class="img-fluid rounded-circle mx-auto border border-5 border-success"
+                    src="/assets/images/emilie.jpg">
+            </div>
+            <div class="col-md-10">
+                <h5>Pseudo : John</h5>
+               
+                <h5>Nom : Duff</h5>
+              
+                <h5>Prénom : John</h5>
+               
+                <h5>Adresse mail : johnduff@example.com</h5>
+                
+            </div>
+
+        </div>
 
     </div>
 </section>
