--- a/views/partials/user/showuser.hbs
+++ b/views/partials/user/showuser.hbs
@@ -5,10 +5,10 @@ Partial : user/ Profil utilisateur
 <section>
     <div class="container">
         <h2>Mon Profil</h2>
-        <div class="row">
+        <div class="row border border-5 border-success">
             <div class="col-md-2">
-                <img class="img-fluid rounded-circle mx-auto border border-5 border-success"
-                    src="/assets/images/emilie.jpg">
+                <img class="img-fluid rounded-circle mx-auto d-block"
+                    src="/assets/images/logo.png">
             </div>
             <div class="col-md-10">
                 <div class="col-md-12">
