--- a/views/partials/blogid/id.hbs
+++ b/views/partials/blogid/id.hbs
@@ -27,7 +27,11 @@ Partial : Id/Id product/article
                             <h4>un titre</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi repellat, optio pariatur
                                 aperiam consequatur incidunt ex tenetur cumque atque iure quae. Laudantium ex assumenda
+                                repellat esse veniam pariatur quod ipsum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi repellat, optio pariatur
+                                aperiam consequatur incidunt ex tenetur cumque atque iure quae. Laudantium ex assumenda
                                 repellat esse veniam pariatur quod ipsum.</p>
+                                <p class="text-muted"> Author: </p>
+
                         </div>
                     </div>
                 </div>
