--- a/views/partials/home/cards.hbs
+++ b/views/partials/home/cards.hbs
@@ -21,9 +21,14 @@ Partial : Home/Cards (News)
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
                             facilis eos quos.</p>
+                        <p class="card-text text-muted">Author :</p>
+                        <div class="card-footer  bg-transparent">
+                            <p class="text-muted">Date: </p>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
@@ -35,9 +40,15 @@ Partial : Home/Cards (News)
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
                             facilis eos quos.</p>
+
+                        <p class="card-text text-muted">Author :</p>
+                        <div class="card-footer  bg-transparent">
+                            <p class="text-muted">Date: </p>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
@@ -49,9 +60,14 @@ Partial : Home/Cards (News)
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
                             facilis eos quos.</p>
+
+                        <p class="card-text text-muted">Author :</p>
+                        <div class="card-footer  bg-transparent">
+                            <p class="text-muted">Date: </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
 </section>
