--- a/views/partials/user/edituser.hbs
+++ b/views/partials/user/edituser.hbs
@@ -8,7 +8,7 @@ Partial : user/ edit user
 <section>
     <h2>Modifier profil</h2>
     <div class="container">
-        <form action="/register" method="post" enctype="multipart/form-data" class=" row g-3">
+        <form action="/user" method="post" enctype="multipart/form-data" class=" row g-3">
 
             <div class="row">
                 <div class="mb-3">
