--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -14,7 +14,10 @@ Partial : blog/Cards
                     <div class="card-body">
                         <h4 class="card-title">{{this.title}}</h4>
                         <p class="card-text">{{this.description}}</p>
-                        <div class="card-footer  bg-transparent"><a href="blog-id" class="btn btn-ghost">Voir l'article</a></div>
+                        <p class="card-text text-muted">Author :</p>
+                        <div class="card-footer  bg-transparent">
+                            <a href="blog-id" class="btn btn-ghost">Voir l'article</a></div>
+                            <p class="text-muted">Date: </p>
                     </div>
                 </div>
             </div>
