--- a/views/partials/navbar/navbar.hbs
+++ b/views/partials/navbar/navbar.hbs
@@ -5,11 +5,14 @@ Partial : navabar
 <!---Navbar--->
 <nav class="navbar navbar-expand-lg navbar-dark bg-theme">
     <div class="container">
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
             aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/"><img src="/assets/images/logo2.png" alt="" width="40" height="35">Graines de Citoyen Montgesnois</a>
+        <a class="navbar-brand" href="/"><img src="/assets/images/logo2.png" alt="" width="40" height="35">Graines
+            de
+            Citoyen Montgesnois</a>
         <div class="collapse navbar-collapse" id="navbarToggler">
 
             <ul class="navbar-nav me-auto mb-2mb-lg-0">
@@ -37,7 +40,7 @@ Partial : navabar
                 Se connecter/S'inscrire
             </button>
 
-            <a class="btn btn-full" href="/user" >Profil</a>
+            <a class="btn btn-full" href="/user">Profil</a>
 
             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#disconnect">
                 <i class="fas fa-power-off"></i>
@@ -55,5 +58,7 @@ Partial : navabar
         <!--  Modal disconnect -->
         {{> modals/modalLogout }}
 
+
     </div>
+
 </nav>
