--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -5,31 +5,33 @@ Page type:Partial Footer /
 
 <!--- Footer--->
 <footer class="container-fluid">
-    <div class="row">
+    <div class="copyright">
 
-        <div class="copyright">
-
-            <div class="col-md-12">
-                <form action="/newsletter" method="post">
-                    <div class="contact-form">
-                        <label>Newsletter:</label>
-                        <input name="EmailNwslter" type="email" id="email" placeholder="Ajouter votre email" />
-                        <button type="submit" class="btn btn-contact">S'inscrire</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="col-md-12 socials">
-                <a href="#"> <i class="fab fa-discord black"></i></a>
-                <a href="#"> <i class="fab fa-facebook black"></i></a>
-                <a href="#"> <i class="fab fa-twitter black"></i></a>
-                <a href="#"> <i class="fab fa-linkedin black"></i></a>
-                <a href="#"> <i class="fab fa-snapchat black"></i></a>
-                <a href="#"> <i class="fab fa-instagram black"></i></a>
-            </div>
-
-            <p class="copyright">Grimou Company © 2021 <a href="#">Mentions légales</a></p>
-
+        <div class="col-md-12 ">
+            <form action="/newsletter" method="post">
+                <div class="contact-form">
+                    <label>Newsletter:</label>
+                    <input name="EmailNwslter" type="email" id="email" placeholder="Ajouter votre email" />
+                    <button type="submit" class="btn btn-contact">S'inscrire</button>
+                </div>
+            </form>
         </div>
+
+        <div class="col-md-12">
+            <p><i class="fas fa-phone"></i> Tél : 02.00.00.00.00</p>
+            <p><i class="fas fa-envelope"></i> Email : Example@example.com</p>
+            <p><i class="fas fa-map-marker-alt"></i> Adresse : 72450 Montfort-le-Gesnois </p>
+        </div>
+
+        <div class="col-md-12 socials">
+            <a href="#"> <i class="fab fa-discord black"></i></a>
+            <a href="#"> <i class="fab fa-facebook black"></i></a>
+            <a href="#"> <i class="fab fa-twitter black"></i></a>
+            <a href="#"> <i class="fab fa-linkedin black"></i></a>
+            <a href="#"> <i class="fab fa-snapchat black"></i></a>
+            <a href="#"> <i class="fab fa-instagram black"></i></a>
+        </div>
+        <p class="copyright">Created by Lucas Ledoux© 2021-2022 <a href="#">Mentions légales</a></p>
     </div>
+
 </footer>
