--- a/views/partials/modals/modaleditcard.hbs
+++ b/views/partials/modals/modaleditcard.hbs
@@ -3,29 +3,31 @@ Modal / Admin : Gestion card
 --}}
 
 <!-------------------------- Modal add cards ------------------------------->
-<div class="modal fade dark" id="editcardModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal fade dark" id="editcardModal{{ this.id }}" tabindex="-1" aria-labelledby="ModalLabel{{ this.id }}"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="ModalLab"> Edit Card</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-           <form action="/admin/{{ this.id }}/?_method=PUT" method="post">
+            <form action="/admin/{{ this.id }}/?_method=PUT" method="post">
                 <div class="modal-body">
 
                     <div class="col-md-12">
                         <label for="formFile" class="form-label">Photos Article</label>
-                        <input name="Blogpic" class="form-control" type="file" id="formFile">
+                        <input name="Blogpic" class="form-control" type="file" id="formFile{{ this.id }}">
                     </div>
                     <div class="col-md-12">
-                        <label for="FormControlInput1" class="form-label">Titre</label>
-                        <input name="title"type="text" class="form-control" id="FormControlInput1"
-                            placeholder="C'est beau c'est Bosch">
+                        <label for="InputTitle" class="form-label">Titre</label>
+                        <input name="title" type="text" class="form-control" id="InputTitle{{ this.id }}"
+                            value="{{ this.title}}">
                     </div>
                     <div class="mb-3">
-                        <label for="FormControlTextarea1" class="form-label">Contenu
+                        <label for="ContenuCard" class="form-label">Contenu
                         </label>
-                        <textarea name="description" class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+                        <textarea name="description" class="form-control" id="ContenuCard{{ this.id }}" rows="3"
+                            value="{{ this.description }}" placeholder="{{ this.description }}"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
