add crud complet + multer

--- a/views/partials/Admin/gestblog.hbs
+++ b/views/partials/Admin/gestblog.hbs
@@ -28,7 +28,7 @@ Partial : Admin/ Gestion Blog
                 {{#each dbarticles }}
                 <div class="col-md-4">
                     <div class="famille-details card mb-3">
-                        <img class="card-img-top" src="/assets/images/creative1.jpg" alt="paysage">
+                        <img class="card-img-top" src="/assets/data/{{ this.imgarticle }}" alt="paysage">
                         <div class="card-body">
 
                             <h4 class="card-title">{{ this.title }}</h4>
