--- a/views/partials/register/newuser.hbs
+++ b/views/partials/register/newuser.hbs
@@ -8,7 +8,7 @@ Partial : register/ New user
 <section>
     <h2>S'inscrire</h2>
     <div class="container">
-        <form action="/register" method="post" enctype="multipart/form-data" class=" row g-3">
+        <form action="/register" method="post" class=" row g-3">
 
             <div class="row">
                 <div class="mb-3">
@@ -25,11 +25,11 @@ Partial : register/ New user
 
                 <div class="col-md-6">
                     <label class="form-label">Prénom:</label>
-                    <input name="firstname" type="text" class="form-control" value="...">
+                    <input name="firstname" type="text" class="form-control">
                 </div>
                 <div class="col-md-6">
                     <label class="form-label">Nom:</label>
-                    <input name="name" type="text" class="form-control" value="...">
+                    <input name="name" type="text" class="form-control">
                 </div>
                 <div class="col-md-12">
                     <label class="form-label">Adresse Email :</label>
@@ -41,7 +41,7 @@ Partial : register/ New user
                 </div>
                 <div class="col-md-6">
                     <label for="Password" class="form-label">Confirmer mot de passe :</label>
-                    <input name="password" type="password" class="form-control" id="Password">
+                    <input name="confpassword" type="password" class="form-control" id="Password">
                 </div>
 
 
